update porm.xml